--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trinkspiel</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -13,6 +13,7 @@
             <p id="question">Tippe auf die Karte, um zu starten!</p>
         </div>
         <button id="nextCard">🎴 Nächste Karte</button>
+        <button id="resetGame">🔄 Reset</button>
     </div>
     <script src="script.js"></script>
 </body>
