--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <div class="container">
         <h1>Trinkspiel 🍻</h1>
+        <div class="filters">
+            <label><input type="checkbox" class="filter" value="peinlich" checked> Peinlich</label>
+            <label><input type="checkbox" class="filter" value="mutprobe" checked> Mutprobe</label>
+            <label><input type="checkbox" class="filter" value="extrem" checked> Extrem</label>
+            <label><input type="checkbox" class="filter" value="trinken" checked> Trinken</label>
+        </div>
         <div class="card" id="card">
             <p id="question">Tippe auf die Karte, um zu starten!</p>
         </div>
